--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QUIZ</title>
+    <link rel="icon" href="gowtham.png" /> <!-- Adding favicon -->
+    <style>
+      footer img {
+        width: 160px; /* Slightly increase width */
+        height: auto; /* Maintain aspect ratio */
+        display: block;
+        margin: 0 auto; /* Center the image */
+      }
+    </style>
   </head>
 
   <body>
     <div id="root"></div>
+
+    <footer>
+      <img src="gowtham.png" alt="Gowtham Kollati Logo" /> <!-- Adding logo -->
+    </footer>
 
     <script type="module" src="/client/App.tsx"></script>
   </body>
